--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,1 +1,132 @@
-INDEX
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+    <title></title>
+
+    <link rel="stylesheet" type="text/css" href="/static/semanticui/semantic.css">
+    <link rel="stylesheet" href="/static/font-awesome-4.3.0/css/font-awesome.min.css">
+
+    <script src="/static/semanticui/jquery.js"></script>
+    <script src="/static/semanticui/semantic.js"></script>
+</head>
+<body style="padding: 20px;">
+
+    <div class="stackable ui page grid">
+        <div class="row">
+            <div class="twelve wide column">
+                <div class="ui large breadcrumb">
+                  <a class="active section">Projects</a>
+                </div>
+            </div>
+            <div class="four wide column">
+                <div class="ui button">
+                <i class="fa fa-plus"></i>&nbsp;Add Project
+                </div>
+            </div>
+        </div>
+        <div class="four wide column">
+            <div class="ui cards">
+                <div class="card">
+                    <div class="content">
+                        <i class="right floated fa fa-bomb"></i>
+                        <div class="header">Elliot Fu</div>
+                        <div class="description">
+                            Elliot Fu is a film-maker from New York.
+                        </div>
+                    </div>
+                    <div class="ui bottom attached button">Browse</div>
+                </div>
+            </div>
+        </div>
+        <div class="four wide column">
+            <div class="ui cards">
+                <div class="card">
+                    <div class="content">
+                        <i class="right floated fa fa-bomb"></i>
+                        <div class="header">Elliot Fu</div>
+                        <div class="description">
+                            Elliot Fu is a film-maker from New York.
+                        </div>
+                    </div>
+                    <div class="ui bottom attached button">Browse</div>
+                </div>
+            </div>
+        </div>
+        <div class="four wide column">
+            <div class="ui cards">
+                <div class="card">
+                    <div class="content">
+                        <i class="right floated fa fa-bomb"></i>
+                        <div class="header">Elliot Fu</div>
+                        <div class="description">
+                            Elliot Fu is a film-maker from New York.
+                        </div>
+                    </div>
+                    <div class="ui bottom attached button">Browse</div>
+                </div>
+            </div>
+        </div>
+        <div class="four wide column">
+            <div class="ui cards">
+                <div class="card">
+                    <div class="content">
+                        <i class="right floated fa fa-bomb"></i>
+                        <div class="header">Elliot Fu</div>
+                        <div class="description">
+                            Elliot Fu is a film-maker from New York.
+                        </div>
+                    </div>
+                    <div class="ui bottom attached button">Browse</div>
+                </div>
+            </div>
+        </div>
+        <div class="four wide column">
+            <div class="ui cards">
+                <div class="card">
+                    <div class="content">
+                        <i class="right floated fa fa-bomb"></i>
+                        <div class="header">Elliot Fu</div>
+                        <div class="description">
+                            Elliot Fu is a film-maker from New York.
+                        </div>
+                    </div>
+                    <div class="ui bottom attached button">Browse</div>
+                </div>
+            </div>
+        </div>
+        <div class="four wide column">
+            <div class="ui cards">
+                <div class="card">
+                    <div class="content">
+                        <i class="right floated fa fa-bomb"></i>
+                        <div class="header">Elliot Fu</div>
+                        <div class="description">
+                            Elliot Fu is a film-maker from New York.
+                        </div>
+                    </div>
+                    <div class="ui bottom attached button">Browse</div>
+                </div>
+            </div>
+        </div>
+        <div class="four wide column">
+            <div class="ui cards">
+                <div class="card">
+                    <div class="content">
+                        <i class="right floated fa fa-bomb"></i>
+                        <div class="header">Elliot Fu</div>
+                        <div class="description">
+                            Elliot Fu is a film-maker from New York.
+                        </div>
+                    </div>
+                    <div class="ui bottom attached button">Browse</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
+</html>
